UPDATE: Add name initials to nodes to avoid name error on pluginLoad in Maya.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(SOURCE_FILES
-    "nodesLib/addFloat.cpp"
+    "nodesLib/ldAddFloat.cpp"
     "pluginMain.cpp")
 
 file(GLOB_RECURSE SRC_FILE *.h *.cpp)
