ADD: BaseRigNode class with codes for Floats and attributes depencies.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(SOURCE_FILES
+    "nodesLib/ldBaseRigNode.cpp"
     "nodesLib/ldAddFloat.cpp"
     "nodesLib/ldBasicConstraint.cpp"
     "pluginMain.cpp")
