ADD: Empty RigCurveNode.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCE_FILES
     "nodesLib/ldBaseRigNode.cpp"
     "nodesLib/ldAddFloat.cpp"
     "nodesLib/ldBasicConstraint.cpp"
+    "nodesLib/ldRigCurveNode.cpp"
     "pluginMain.cpp")
 
 file(GLOB_RECURSE SRC_FILE *.h *.cpp)
