ADD: bezierCurve source file in core.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(SOURCE_FILES
+    "core/bezierCurve.cpp"
     "nodesLib/ldBaseRigNode.cpp"
     "nodesLib/ldAddFloat.cpp"
     "nodesLib/ldBasicConstraint.cpp"
