--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(ldRigNodes)
 
 set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/install)
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/modules)
+set(INSTALL_PATH ${CMAKE_CURRENT_BINARY_DIR}/install)
 
 add_subdirectory(src)
 message( "SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
