--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCE_FILES
     "nodesLib/ldRigFitNode.cpp"
     "nodesLib/ldRigFootRollNode.cpp"
     "nodesLib/ldRigSpaceSwitchNode.cpp"
+    "nodesLib/ldRigLogicalAndNode.cpp"
     "pluginMain.cpp")
 
 file(GLOB_RECURSE SRC_FILE *.h *.cpp)
