--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SOURCE_FILES
     "nodesLib/ldRigLogicalOrNode.cpp"
     "nodesLib/ldRigSelectCasesNode.cpp"
     "nodesLib/ldRigIkPlane.cpp"
+    "nodesLib/ldRigFloatSwitchNode.cpp"
     "pluginMain.cpp")
 
 file(GLOB_RECURSE SRC_FILE *.h *.cpp)
