FIX: Upgrade ss_config with latest changes in the neck module

--- a/moduleSources/scripts/ldRigNodes/configs/ss_config.json
+++ b/moduleSources/scripts/ldRigNodes/configs/ss_config.json
@@ -36,7 +36,7 @@
                 ]
             },
             {
-                "element_name": "head_IK_BUF",
+                "element_name": "headConnect_BUF",
                 "targets": [
                     {
                         "id":0,
