--- a/moduleSources/scripts/ldRigNodes/configs/ss_config.json
+++ b/moduleSources/scripts/ldRigNodes/configs/ss_config.json
@@ -301,10 +301,49 @@
                 ]
             },
             {
+                "element_name": "chestMainControllers_GRP",
+                "targets": [
+                    {
+                        "id":0,
+                        "module": "spine",
+                        "mirrorable": false,
+                        "name": "attachToChest_BUF",
+                        "type": "srt",
+                        "ui_name": "Parent"
+                    }
+                ]
+            },
+            {
+                "element_name": "L_clavicle_BUF",
+                "targets": [
+                    {
+                        "id":0,
+                        "module": "L_clavicle",
+                        "mirrorable": false,
+                        "name": "clavicle_JNT",
+                        "type": "srt",
+                        "ui_name": "Parent"
+                    }
+                ]
+            },
+            {
+                "element_name": "R_clavicle_BUF",
+                "targets": [
+                    {
+                        "id":0,
+                        "module": "R_clavicle",
+                        "mirrorable": false,
+                        "name": "clavicle_JNT",
+                        "type": "srt",
+                        "ui_name": "Parent"
+                    }
+                ]
+            },
+            {
                 "element_name": "L_humerus_BUF",
                 "targets": [
                     {
-                        "id":1,
+                        "id":0,
                         "module": "L_arm",
                         "mirrorable": false,
                         "name": "humerusRoll_0_JNT",
@@ -317,7 +356,7 @@
                 "element_name": "R_humerus_BUF",
                 "targets": [
                     {
-                        "id":2,
+                        "id":0,
                         "module": "R_arm",
                         "mirrorable": false,
                         "name": "humerusRoll_0_JNT",
@@ -330,7 +369,7 @@
                 "element_name": "L_radius_BUF",
                 "targets": [
                     {
-                        "id":3,
+                        "id":0,
                         "module": "L_arm",
                         "mirrorable": false,
                         "name": "radiusRoll_0_JNT",
@@ -343,7 +382,7 @@
                 "element_name": "R_radius_BUF",
                 "targets": [
                     {
-                        "id":4,
+                        "id":0,
                         "module": "R_arm",
                         "mirrorable": false,
                         "name": "radiusRoll_0_JNT",
@@ -356,7 +395,7 @@
                 "element_name": "ikCollarControllers_GRP",
                 "targets": [
                     {
-                        "id":5,
+                        "id":0,
                         "module": "spine",
                         "mirrorable": false,
                         "name": "attachToChest_BUF",
